# TheArtist

./: .gitignore  API_SPEC.md  LICENSE  README.md
ai/: pyproject.toml
ai/physics/: __init__.py  check_ordering.py  chord_consonance.py  composite.py  dissonance.py  diversity.py  periodicity.py  rerank.py  voicing.py
ai/rag/: __init__.py  _setup_corpora.sh  chunk.py  coherence.py  embed.py  explain.py  extract.py  ocr_prepass.py  retrieve.py  tag.py
ai/training/: model.py  tokenizer.py
backend/: pyproject.toml
backend/app/: main.py
backend/app/models/: schemas.py
backend/app/routes/: chords.py  generate.py  models.py  song.py
backend/app/services/: chord_generator.py  genre_tables.py  inference.py  song_builder.py  song_form.py  voice_leading.py
frontend/: index.html  package-lock.json  package.json
frontend/public/drums/: LICENSE.txt  china.flac  crash.flac  hihat-closed.flac  hihat-open.flac  kick.flac  ride.flac  sidestick.flac  snare.flac  tom-hi.flac  tom-lo.flac  tom-mid.flac
frontend/src/: index.css  main.tsx
frontend/src/components/: Layout.tsx
frontend/src/components/MyPage/: MyPage.tsx  SessionStaff.tsx
frontend/src/components/RightPanel/: ChordActions.tsx  ChordTransitionView.tsx  DrumSelector.tsx  GenerateProgress.tsx  GuitarFretboard.tsx  MidiStatus.tsx  PianoKeyboard.tsx  PlaybackControls.tsx  SongSettings.tsx  ThemeToggle.tsx  VoicingViewer.tsx  useMidiCapture.ts
frontend/src/components/ScoreEditor/: Staff.tsx
frontend/src/engine/: arrangement.ts  chordDisplay.ts  chordGenerator.ts  chordParser.ts  constants.ts  drums.ts  instruments.ts  midiExport.ts  midiInput.ts  playback.ts  romanNumeral.ts  slotNav.ts  sseStream.ts  voicingEngine.ts
frontend/src/models/: types.ts
frontend/src/store/: generationStore.ts  sessionStorage.ts  sessionStore.ts  songStore.ts
model/: _download.py
