[project]
name = "theartist-backend"
version = "0.1.0"
description = "TheArtist backend — AI chord generation API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "pydantic>=2.12.5",
    "uvicorn>=0.42.0",
    "torch>=2.5.1",
    "numpy>=2.4.4",
    "music21>=9.9.1",
    "openai>=2.32.0",
    "sentence-transformers>=5.4.1",
    "chromadb>=1.5.8",
    "peft>=0.13.0",
    "mido>=1.3.3",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

# CUDA wheels exist only for linux/windows on the cu121 index; macOS falls
# back to PyPI (CPU/MPS wheels) so `uv sync` works on a Mac too.
[tool.uv.sources]
torch = [{ index = "pytorch-cu121", marker = "sys_platform == 'linux'" }]
